# Microsoft-Introduction-to-C---Programming-Professional-Certificate

./: .gitignore  CMakeLists.txt  README.MD
00_Environment_Setup/: Lab_01-Personal_Introduction.cpp
01_Fundamentals]/Module_1/: Lab_01-Personal_Introduction.cpp
01_Fundamentals]/Module_1/01 - Introduction_to_c_syntax/: ExploringProgram_Structure_Through_Modification.cpp  multi_component.cpp
01_Fundamentals]/Module_1/02 - Data Types and Variables in C++/: data_types_app.cpp  temperature_converter.cpp  variable_practice.cpp
01_Fundamentals]/Module_1/03 - Operators and Control Flow/: conditions_lab.cpp  interactive_calculate_as_a_function.cpp  interactive_calculator.cpp  pattern_generation.cpp  practice_lab.cpp
01_Fundamentals]/Module_1/04 - Code_Creation_and_Compilation/: _rec_fab_program.cpp  it_fab_program.cpp  preprocessed.txt  program.cpp  program.s
02_Intermediate_Techniques/: README.md  scratch.cpp
02_Intermediate_Techniques/Module_1_Arrays_and_Strings/: array_activity.cpp  comprehensive_text_analyzer.cpp  matix_manipulation.cpp  matrix_manipulation.cpp  string_safety_practice.cpp
02_Intermediate_Techniques/Module_2_IO_and_File_Handling/: fileioprocessing.cpp  inputValidationLab.cpp  salesReport.cpp  sales_report.txt  streamUsage.cpp
02_Intermediate_Techniques/Module_2_IO_and_File_Handling/Data_logger/: Logger.cpp  Logger.h  Makefile  README.md  data.csv  dataLogger.cpp  main.cpp  utils.cpp  utils.h
02_Intermediate_Techniques/Module_4_Libraries_and_GenAI/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  README.md  config.json  main.cpp
02_Intermediate_Techniques/Module_4_Libraries_and_GenAI/CompleteExternalLibraryProject/: CMakeLists.txt  DataStructures.h  NetworkManager.cpp  NetworkManager.h  README.md  downloaded_site.html  main.cpp  multi_scraper  results.csv  simple_web.cpp  sites.txt
03_Object_Oriented_Programming/: README.md
03_Object_Oriented_Programming/Module_1_Classes_and_Objects/: Practice_Digital_Lib_Lab.cpp  StudentGradeLab.cpp
03_Object_Oriented_Programming/Module_1_Classes_and_Objects/Labs/SimulatedDatabaseManager/: CMakeLists.txt  DatabaseConnection.cpp  DatabaseConnection.h  README.md  main.cpp
(+67 files in other folders)
